concord_macros/tests/trybuild/fail/codegen/reserved_websocket_arity_four.rs
use concord_macros::api;

api! {
    client ReservedWebSocketArityFourApi {
        base "https://example.com"
    }

    WS Connect
        path ["connect"]
        -> WebSocket<A, B, C, D>
}

fn main() {}
